# hexon

./: .gitignore  Dockerfile  README.md  pyproject.toml
algo/: longest_palindrome.py
algo/architectures/: social_graph.md
algo/arrays/prefix_sum/: pivot_index.py
algo/go/hackerrank/: q2_reversing_tcp_server.go
algo/go/linkedlist/: linkedlist.go
algo/leetcode/2390_removing_stars_from_a_string/: removing_stars.py
algo/leetcode/non_neg_ints_with_1s/: non_neg_ints_with_1s.py
algo/leetcode/rank_transform_of_a_matrix/: rank_transform_of_a_matrix.py
algo/linked_lists/: middle_of_list.py
algo/py/companies/: zillow.py
algo/search/unionfind/: unionfind.cpp
algo/trees/binary_tree_level_order_traversal/: binary_tree_level_order_traversal_testcases.py
algo/trees/number_of_islands/: number_of_islands_testcases.py
architectures/: social_media_site.md
cpp/queue/: queue.cpp
dsa/linked_lists/: merge_two_sorted_lists.py
dsapa/: system_design_template.txt
dsapa/dsa/arrays/: best_time_to_buy_and_sell.py
dsapa/dsa/binarysearch/: binarysearch.py
dsapa/dsa/hashes/: isomorphic_strings.py
dsapa/dsa/linked_lists/: detect_cycle_2.py  linked_list_utils.py  merge_two_sorted_lists.py  middle_of_list.py  reverse_a_linked_list.py
dsapa/dsa/math/: max_area_of_cake.py
dsapa/dsa/sorts/: insertion_sort.cpp
dsapa/dsa/trees/: n_ary_preorder_traversal.py
dsapa/go/hackerrank/: custom_string_sorting.go  q1_httpserver.go
dsapa/go/sorting/: bubblesort.go
dsapa/go/stack/: stack.go
dsapa/go/tree/: levelorder.go
dsapa/go/trees/: binarytree.go
dsapa/py/companies/: reddit.py
dsapa/utils/: linked_list.py
go/arrays/: twosum.go
go/codewars/reverse_words/: reverse_words.go
go/linkedlist/: linkedlist.go
go/queue/: queue.go
go/tree/: maxdepth.go
guides/: pramps.md
indexes/: leet75.txt
linkedlist/: linkedlist.c
metadata/: cards.json
py/leet75/day1/: pivot_index.py
py/leetcode/min_deletetions_char_freq/: min_del_char_freq.py
py/leetcode/three_equal_parts/: three_equal_parts.py
py/pramp/array_of_array_products/: array_of_array_products.py
py/pramp/bst_successor_search/: bst_successor_search.py
py/pramp/find_the_duplicates/: find_the_duplicates.py
py/pramp/getting_a_different_number/: getting_a_different_number.py
py/pramp/move_zeros/: move_zeros.py
py/pramp/root_of_number/: root_of_number.py
py/trees/: binarytree.py
src/hexon/: init_data.py  main.py  utils.py  wiggle_subsequence.py
src/hexon/api/: deps.py
src/hexon/core/: config.py  security.py
src/hexon/crud/: __init__.py  base.py  crud_card.py  crud_user.py
src/hexon/db/: engine.py  init_db.py
src/hexon/gpt/: assistant.prompt  questions.prompt  trivia_gpt.py
src/hexon/linked_lists/: detect_cycle_2.py  merge_two_sorted_lists.py  reverse_a_linked_list.py
src/hexon/models/: __init__.py  card.py  models.py
src/hexon/schemas/: user.py
src/solutions/: longest_palindrome.py  wiggle_subsequence.py
src/solutions/leetcode/: n_ary_preorder_traversal.py
src/structs/arrays/: best_time_to_buy_and_sell.py
src/structs/binarysearch/: binarysearch.py
src/structs/hashes/: isomorphic_strings.py
src/structs/linked_lists/: detect_cycle_2.py  linked_list.py  merge_two_sorted_lists.py  middle_of_list.py  reverse_a_linked_list.py
src/structs/math/: max_area_of_cake.py
src/structs/trees/: __init__.py  trie.py
src/ui/: apiService.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/ui/components/: flashcard.tsx  site-navbar.tsx  theme-provider.tsx  topic-select.tsx  triviagpt.tsx
src/ui/pages/: _app.tsx  board.tsx  index.tsx
src/ui/src/: App.tsx  Hexon.tsx  apiService.ts  index.css
src/ui/stories/: FlashCard.stories.tsx  TopicSelect.stories.tsx
src/ui/styles/: index.css
stack/: stack.cpp
unionfind/: unionfind.cpp
(+51 files in other folders)
