[tool.poetry]
name = "algo"
version = "0.1.0"
description = "Data Structures, Algorithms, Patterns and Architectures"
authors = ["Andrew Tanner <andrew@drewnix.dev>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.1.2"
line-profiler = "^3.5.1"
pptree = "^3.1"
cookiecutter = "^2.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
